name:                hs-euo
version:             0.1.0
synopsis:            Simple bindings and utilities to the EasyUO uo.dll.
homepage:            https://github.com/dtulig/hs-euo#readme
license:             MIT
license-file:        LICENSE
author:              David Tulig <david.tulig@gmail.com>
maintainer:          david.tulig@gmail.com
copyright:           2016 David Tulig
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
description:         Please see README.md

library
  hs-source-dirs:      src
  exposed-modules:     Tulig.UO.Base
                     , Tulig.UO.Command
                     , Tulig.UO.Foreign
                     , Tulig.UO.Types
                     , Tulig.UO.Util
                     , Tulig.UO.Variable
  build-depends:       base >= 4.7 && < 5
                     , transformers
                     , mtl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010
  extra-libraries:     uo

test-suite hs-euo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hs-euo
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dtulig/hs-euo
